--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "Pragmatic-language-dataset-code"
+name: Pragmatic-language-dataset-code
 output_dir: ../docs
 navbar:
-  title: "Pragmatic-language-dataset-code"
+  title: Pragmatic-language-dataset-code
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,10 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fa-github
+    text: Source code
+    href: https://github.com/JalilRT/Pragmatic-language-dataset-code
 output:
   workflowr::wflow_html:
     toc: yes
